Add UI instructions